Thu Jun 12 14:16:05 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc (main): Fixed boolean_keywords handling to
	  work over multiple config files (must destroy old list before
	  creating new one).

	* htcommon/defaults.cc, htsearch/Display.cc (setVariables): Removed
	  incorrect default value for "config" attribute, and removed hack
	  that attempted to correct it.

	* htdoc/attrs.html: Regenerated using cf_generate.pl.

Thu Jun 12 13:28:01 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htcommon/HtSGMLCodec.cc (ctor): Added
	  translate_latin1 option to allow disable Latin 1 specific SGML 
	  translations.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	  Regenerated using cf_generate.pl.

Mon Jun 9 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* htsearch/htsearch.cc: Fixed setupWords loop for junk at end of query
	
Mon Jun 9 2003 Lachlan Andrew  <lha@users.sourceforge.net>
	
	* htsearch/Display.cc: Set CONFIG template variable to the base name
	  of the config file (no directory or .conf), as expected by  htsearch

Mon Jun 9 2003 Lachlan Andrew  <lha@users.sourceforge.net>
	
	* test/test_functions.in: avoid trying killing apache multiple times

	* configure,configure.in: Reformat --help  output
	* htdoc/FAQ.html: Brought up-to-date with main docs
	* htdoc/hts_templates.html: added hyperlinks.
	* installdir/search.html: Display version

Sun Jun 8 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* configure:  Hack to set --disable-bigfile for Solaris (with Sun cc)
	  and  --disable-shared --enable-static  for Mac OS X

	* test/{test_functions.in,t_htdig,t_htdig_local,t_htnet}:
	  Only start Apache for tests which need it, and kill it after the test

	* contrib/parse_doc.pl: Allow file names containing spaces (from .deb)

Mon Jun 2 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/mp_cmpr.c: Add default zlib setting to  default_cmpr_info