@@ -245,8 +245,11 @@
 		<strong>MATCH_MESSAGE</strong>
 	  </dt>
 	  <dd>
-		This is either <code>all</code> or <code>some</code> depending on
+		This is either <code>all</code> or <code>any</code> depending on
 		the <a href="hts_form.html#match_method">match method</a> used.
+		(These values are overridden by the
+		<a href="attrs.html#method_names">method_names</a>
+		attribute.)
 	  </dd>
 	  <dt>
 		<strong>MATCHES</strong>
@@ -494,7 +497,7 @@
 	</dl>
 	<hr size="4" noshade>
 
-	Last modified: $Date: 2003/06/09 06:00:30 $
+	Last modified: $Date: 2003/06/13 13:56:03 $
 
   </body>
 </html>
